force-app/main/default/objects/Account/fields/Average_Amount_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Average_Amount_of_Opportunities__c</fullName>
    <description>Average of related Opportunities.</description>
    <formula>Total_Amount_of_Opportunities__c / Number_of_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Amount of Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>