force-app/main/default/objects/Account/fields/Total_Amount_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Opportunities__c</fullName>
    <description>Total amount of related Opportunities.</description>
    <label>Total Amount of Opportunities</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>